# recipeSpace_web

./: README.MD
backend/: .env  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3721a1669dc8_add_favorite_recipes_table.py  4db06e232c7e_create_recipes_table.py  bf84ee989515_create_users_table.py
backend/app/: main.py
backend/app/api/: auth.py
backend/app/api/routes/: __init__.py  recipes.py  users.py
backend/app/database/: base.py  base_fave.py  base_recipe.py  base_user.py  connection.py
backend/app/models/: fave.py  recipe.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: api.js  recipeApi.js  userApi.js
frontend/src/components/FilterSidebar/: FilterSidebar.css  FilterSidebar.jsx
frontend/src/components/auth/: AuthModal.css  AuthModal.jsx
frontend/src/components/filterPanel/: index.jsx
frontend/src/components/header/: Header.css  index.jsx
frontend/src/components/recipeCard/: index.jsx
frontend/src/components/recipesGrid/: index.jsx
frontend/src/pages/CreateRecipe/: CreateRecipe.jsx
frontend/src/pages/Home/: Home.css  index.jsx
frontend/src/pages/Recipe/: RecipePage.css  RecipePage.jsx
frontend/src/pages/UserProfile/: UserProfile.css  UserProfile.jsx
frontend/src/store/: store.js
frontend/src/store/slices/: authSlice.js  recipesSlice.js
